[gd_scene load_steps=4 format=3 uid="uid://bulpab6yx7acv"]

[ext_resource type="Script" path="res://Scripts/menu_pausa.gd" id="1_iqset"]
[ext_resource type="Theme" uid="uid://ber1ir3mp6gmj" path="res://Fonts/Pixel-Kenney.tres" id="2_dhchy"]
[ext_resource type="Texture2D" uid="uid://b63wp4n6w1vv7" path="res://Icons/kenney_onscreen-controls/Sprites/shaded-dark/shadedDark16.png" id="3_3jy31"]

[node name="Menu_Pausa" type="CanvasLayer"]
process_mode = 3
script = ExtResource("1_iqset")

[node name="ColorRect" type="ColorRect" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 6
size_flags_vertical = 6
color = Color(0.116127, 0.116127, 0.116127, 0.392157)

[node name="Label" type="Label" parent="ColorRect"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -20.0
offset_top = 50.0
offset_right = 20.0
offset_bottom = 76.64
grow_horizontal = 2
theme = ExtResource("2_dhchy")
text = "Pausa"

[node name="Menu_Principal" type="Button" parent="ColorRect"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -4.0
offset_top = -4.0
offset_right = 4.0
offset_bottom = 4.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("2_dhchy")
theme_override_font_sizes/font_size = 15
text = "Men√∫ Principal"

[node name="Quit" type="Button" parent="ColorRect"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -21.0
offset_top = 25.0
offset_right = 21.0
offset_bottom = 56.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("2_dhchy")
theme_override_font_sizes/font_size = 14
text = "Salir"

[node name="Play" type="Button" parent="ColorRect"]
layout_mode = 0
offset_left = 20.0
offset_top = 20.0
offset_right = 76.0
offset_bottom = 76.0
scale = Vector2(0.5, 0.5)
icon = ExtResource("3_3jy31")

[connection signal="pressed" from="ColorRect/Menu_Principal" to="." method="_on_menu_principal_pressed"]
[connection signal="pressed" from="ColorRect/Quit" to="." method="_on_quit_pressed"]
[connection signal="pressed" from="ColorRect/Play" to="." method="_on_play_pressed"]
